--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,23 @@
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Portafolio personal creado para mostrar mis trabajos y conocimientos al mundo." />
 
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo128.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+		<!-- Load Fonts -->
+
+		<link
+			href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+			rel="stylesheet"
+		/>
 
 		<title>Axel Estrada</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
+
+		<!-- <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script> -->
 	</body>
 </html>
