Hice algunas mejoras y agregue las fotos correspondientes al perfil

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,38 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Portafolio personal creado para mostrar mis trabajos y conocimientos al mundo." />
+		<meta
+			name="description"
+			content="I am Axel Estrada, web developer from Tegucigalpa, Honduras and currently i am studying computer engineering."
+		/>
+		<meta name="keywords" content="web developer, axel estrada, seo optimization, mobile development" />
+		<meta name="author" content="Axel Estrada" />
+		<meta name="copyright" content="Axel Estrada" />
+		<meta name="robots" content="index, nofollow" />
 
-		<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo128.png" />
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<meta property="og:title" content="Axel Estrada | Web Developer" />
+		<meta property="og:image" content="https://myresume.icu/ryancv/images/bg.jpg" />
+		<meta property="og:url" content="https://axelestrada.github.io" />
+		<meta property="og:type" content="website" />
+		<meta property="og:locale" content="en_US" />
+		<meta
+			property="og:description"
+			content="I am Axel Estrada, web developer from Tegucigalpa, Honduras and currently i am studying computer engineering."
+		/>
+
+		<meta name="twitter:title" content="Axel Estrada | Web Developer" />
+		<meta name="twitter:image" content="https://myresume.icu/ryancv/images/bg.jpg" />
+		<meta name="twitter:url" content="https://axelestrada.github.io" />
+		<meta name="twitter:card" content="website" />
+		<meta name="twitter:site" content="summary" />
+		<meta
+			name="twitter:description"
+			content="I am Axel Estrada, web developer from Tegucigalpa, Honduras and currently i am studying computer engineering."
+		/>
+
+		<link rel="icon" href="favicon.png" />
+		<link rel="apple-touch-icon" href="logo128.png" />
+		<link rel="manifest" href="manifest.json" />
 
 		<!-- Load Fonts -->
 
@@ -17,7 +44,19 @@
 			rel="stylesheet"
 		/>
 
-		<title>Axel Estrada</title>
+		<title>Axel Estrada | Web Developer</title>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z9M7HPVJDZ"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-Z9M7HPVJDZ');
+		</script>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
