solucione un error del responsive y habilite el boton para descargar el cv

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 		<meta name="robots" content="index, nofollow" />
 
 		<meta property="og:title" content="Axel Estrada | Web Developer" />
-		<meta property="og:image" content="https://myresume.icu/ryancv/images/bg.jpg" />
+		<meta property="og:image" content="https://live.staticflickr.com/65535/50983949232_b03436f6aa_b.jpg" />
 		<meta property="og:url" content="https://axelestrada.github.io" />
 		<meta property="og:type" content="website" />
 		<meta property="og:locale" content="en_US" />
@@ -24,7 +24,7 @@
 		/>
 
 		<meta name="twitter:title" content="Axel Estrada | Web Developer" />
-		<meta name="twitter:image" content="https://myresume.icu/ryancv/images/bg.jpg" />
+		<meta name="twitter:image" content="https://live.staticflickr.com/65535/50983949232_b03436f6aa_b.jpg" />
 		<meta name="twitter:url" content="https://axelestrada.github.io" />
 		<meta name="twitter:card" content="website" />
 		<meta name="twitter:site" content="summary" />
